# voxels

./: Cargo.toml  build.rs
shaders/: quad.frag.spv  quad.vert.spv  uniform.vert  uniform.vert.spv
src/: ca.rs  camera.rs  imports.rs  main.rs  utils.rs
