[package]
name = "hal"
version = "0.1.0"
authors = ["Steve Larsen <f3bl@gmx.com>"]

[dependencies]
env_logger = "0.5"
image = "0.19"
log = "0.4"
winit = "0.17"
glsl-to-spirv = "0.1.7"
gfx-hal = { git = "https://github.com/gfx-rs/gfx" }

[dependencies.gfx-backend-vulkan]
git = "https://github.com/gfx-rs/gfx"


[build-dependencies]
glsl-to-spirv = "0.1.7"
